# OPGG.py

./: .coveragerc  .gitignore  CLAUDE.md  LICENSE  LICENSE.txt  README.md  main.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  run_tests.bat  run_tests.py  run_tests.sh
.github/workflows/: code-quality.yml  test.yml
opgg/: __init__.py  cacher.py  champion.py  champion_stats.py  exceptions.py  game.py  keyword.py  league_stats.py  opgg.py  opscore.py  params.py  queue_info.py  response.py  search_result.py  season.py  season_info.py  summoner.py  tier.py  utils.py
opgg/v1/: __init__.py  cacher.py  champion.py  game.py  opgg.py  params.py  season.py  summoner.py  utils.py
opgg/v2/: cacher.py  champion.py  game.py  games.json  league.py  opgg.py  params.py  response.py  search.json  search_result.py  season.py  summary.json  summoner.py  utils.py
opgg/v2/types/: params.py  response.py
tests/: __init__.py  conftest.py  opggtests.py  run.py  test_cacher.py  test_error_scenarios.py  test_models.py  test_opgg_cache_management.py  test_opgg_champions.py  test_opgg_games.py  test_opgg_init.py  test_opgg_metadata.py  test_opgg_search.py  test_params.py  test_utils.py
tests/fixtures/: __init__.py  capture_fixtures.py
tests/fixtures/champions/: champion_266.json  champion_stats.json  champions_all.json
tests/fixtures/errors/: 404_not_found.json  429_rate_limit.json
tests/fixtures/games/: games_ranked.json  games_total.json
tests/fixtures/metadata/: keywords.json  seasons.json  versions.json
tests/fixtures/summoner/: profile_full.json  search_single.json
tests/integration/: __init__.py  test_error_handling.py  test_opgg_async.py  test_opgg_sync.py
tests/unit/: __init__.py  test_cacher.py  test_exceptions.py  test_models.py  test_response_handler.py  test_utils.py
