[tool.poetry]
name        = "opgg-py"
version     = "1.4.2"
description = "An unofficial Python library for accessing OPGG data."
authors     = ["ShoobyDoo"]
license     = "LICENSE"
readme      = "README.md"

[tool.poetry.dependencies]
python         = ">=3.11,<4"
beautifulsoup4 = "^4.12.2"
requests       = "^2.31.0"
fake-useragent = "^1.5.1"

[tool.poetry.group.dev.dependencies]
black         = {extras = ["d"], version = "^24.4.2"}
python-dotenv = "^1.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
